# C___University_2024_25

./: CMakeLists.txt  README.md
ATM website/: index.html  script.js  style.css
C++ University 2024-25/: 5.1  7.1  CMakeLists.txt  Superlate numbers.cpp  Task 5.1  Task2.1  Time.cpp  coins1.cpp  coins2.cpp  futureValue1.cpp  radostin.txt  saldina.txt  task 2.1
C++ University 2024-25/Hackerrank/: ArraysIntroduction.cpp  Basic Data Types  .cpp  Classes.cpp  Conditional Statement.cpp  ForLoop.cpp  Functions.cpp  InputAndOutput.cpp  Pointer.cpp  Power.cpp  VarableSizedArray.cpp
C++ University 2024-25/Laboratory Excercise Homework 1/: Task 1.cpp  Task 2.cpp  Task 3.cpp
C++ University 2024-25/Laboratory Excercise Homework 1/TEMA 1/: Task 1.cpp  Task 3.cpp
C++ University 2024-25/Laboratory Excercise Homework 1/TEMA 2/: Task 1 .cpp  Task 2.cpp  Task 3.cpp
C++ University 2024-25/Laboratory Excercise Homework 1/TEMA 3/: Task 1.cpp  demo.cpp
C++ University 2024-25/Project1/: functions.cpp  functions.h  main.cpp
C++ University 2024-25/Увод в алгоритмите и програмирането/: 5.1.cpp
C++ University 2024/25/: CMakeLists.txt
HotelManager/: CMakeLists.txt  Guest.cpp  Guest.h  HotelManager.cpp  HotelManager.h  Person.cpp  Person.h  README  Reservation.cpp  Reservation.h  Room.cpp  Room.h  main.cpp
PerfectNumbers/: functions.cpp
Programming Lectures NBU/: Triangle Area.cpp  main.cpp  squareArea.cpp
Project/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
ProjectForUniversity/: CMakeLists.txt  functions.cpp  main.cpp
project_root/: CMakeLists.txt  main.cpp
untitled/: functions.cpp  functions.h  main.cpp  triangleArea.cpp
untitled1/: main.cpp  temperature.cpp  temperature.h
(+183 files in other folders)
